--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ body {
 #container{
     margin: 20px auto;
     width: 550px;
-    height: 570px;
+    min-height: 570px;
+    max-height: auto;
     padding: 30px;
 
     box-sizing: border-box;
@@ -75,3 +76,95 @@ hr{
     text-align: center;
     font-size: 20px;
 }
+
+ul{
+    list-style-type: none;  
+  }
+  
+  li{
+      background-color: rgb(0, 0, 0);
+      color: white;
+      margin-bottom: 10px;
+      padding: 10px;
+  
+      font-size: 20px;
+  
+      border-radius: 5px;
+  }
+  
+  
+  .delete{
+      color: black;
+      background-color: rgb(255, 208, 0);
+      
+      font-size: 17px;
+  }
+  
+  .btnDelete{
+      float: right;
+      background-color: rgb(255, 208, 0);
+      border-radius: 5px;
+      width: 25px;
+      height: 25px;
+  
+  }
+  
+  @media screen and (max-width: 770px){
+    #container{
+        width: 300px;
+        min-height: 200px;
+        max-height: auto;
+        margin: 5px auto;
+        padding: 15px;
+    }
+    
+    h1{
+        text-align: center;
+        font-family: 'Shadows Into Light', Helvetica, sans-serif;
+        font-size: 30px;
+    
+        margin-bottom: 10px;
+    }
+    
+    p{
+        font-size:15px;
+        margin-bottom: 10px;
+    }
+    
+    .input{
+        height:25px;
+    }
+    
+    .btn{
+        height:25px;
+        width: 130px;
+        margin-bottom: 10px;
+    }
+    
+    .resultContainer{
+        width: 270px;
+        height: 25px;
+        padding-top: 5px;
+    }
+    
+    .result{
+        text-align: center;
+        font-size: 18px;
+    }
+    
+    li{
+        margin-bottom: 7px;
+        padding: 8px;
+        font-size: 15px;
+    }
+    
+    .delete{
+        font-size: 15px;
+    }
+    
+    .btnDelete{
+        width: 23px;
+        height: 20px;
+    }
+      }
+  
